// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builders typescript tsLiteralType accept unary expression 1`] = `
Object {
  "literal": Object {
    "argument": Object {
      "type": "NumericLiteral",
      "value": 1,
    },
    "operator": "-",
    "prefix": true,
    "type": "UnaryExpression",
  },
  "type": "TSLiteralType",
}
`;

exports[`builders typescript tsLiteralType accepts unary expression with bigint literal 1`] = `
Object {
  "literal": Object {
    "argument": Object {
      "type": "BigIntLiteral",
      "value": 123456789n,
    },
    "operator": "-",
    "prefix": true,
    "type": "UnaryExpression",
  },
  "type": "TSLiteralType",
}
`;
